--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         </module-one>
         
         <module-two>
-            <div>my awesome new module about news</div>
-            <div></div>
+            <div>my content</div>
         </module-two>
+        
     </body>
 </html>
